# Transfer-Learning-HuggingFace

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-app.txt  requirements-ci.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  api.py  gradio_app.py  results_data.py  serve.py
configs/: clip_config.py  text_config.py  vision_config.py
docs/adr/: 0001-artifact-path-contract.md
docs/superpowers/plans/: 2026-06-29-production-overhaul.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AboutPanel.tsx  ClipPanel.tsx  ResultsPanel.tsx  TextPanel.tsx  VisionPanel.tsx  ui.tsx
frontend/lib/: api.ts
notebooks/: 01_vision_cnn_vit_dinov2.ipynb  02_text_roberta_modernbert_calibration.ipynb  03_clip_zeroshot_prompt_engineering.ipynb
results/clip/: clip_results.json
results/text/distilbert/: result.json  temperature.json
results/text/modernbert/: result.json  temperature.json
results/text/roberta/: result.json  temperature.json
results/vision/: summary.csv
results/vision/dinov2_base/full_finetune/frac0.01/: result.json
results/vision/dinov2_base/full_finetune/frac0.05/: result.json
results/vision/dinov2_base/full_finetune/frac0.10/: result.json
results/vision/dinov2_base/full_finetune/frac1.00/: result.json
scripts/: build_clip_index.py  push_models_to_hub.py  run_grid_resumable.py  train_clip.py  train_text.py  train_vision.py
src/clip/: pipeline.py
src/text/: trainer.py
src/utils/: data.py  logging_utils.py  metrics.py  mlflow_utils.py  paths.py  visualization.py
src/vision/: model.py  trainer.py
tests/: conftest.py  test_api_endpoints.py  test_attention_rollout.py  test_data_sampling.py  test_logging.py  test_metrics.py  test_paths.py  test_vision_model.py
(+20 files in other folders)
