[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transfer-learning-huggingface"
version = "0.1.0"
description = "Transfer learning benchmarks (vision, text, CLIP) on HuggingFace."
requires-python = ">=3.10"
# Runtime deps are pinned per surface in requirements-*.txt (ci / app / train).
# This table exists so `pip install -e .` makes the `src` package importable
# without relying on the tests/conftest.py sys.path shim.

[tool.setuptools.packages.find]
# Only the reusable library layer is a real package; app/, configs/, scripts/
# stay importable via the repo-root sys.path approach in tests/conftest.py.
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src"]
omit = ["*/__init__.py"]

[tool.coverage.report]
show_missing = true
# The deterministic logic layer (paths, metrics, data, logging) is unit-tested;
# the training/serving paths are validated by an end-to-end run, not unit tests,
# so overall coverage is intentionally partial. No hard gate to avoid a
# misleading red build on integration-only modules.

[tool.ruff]
line-length = 100
target-version = "py312"
# Notebooks follow exploratory conventions (top-level expressions, re-imports);
# linting them adds noise without production value.
extend-exclude = ["notebooks", "*.ipynb"]

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle, I = isort. Pragmatic set for a research repo.
select = ["E", "F", "I"]
ignore = ["E501"]  # line length is formatter's job, not a blocking lint

[tool.mypy]
# Advisory only (CI runs `mypy src || true`). ML libs ship incomplete stubs, so
# ignore missing imports to keep the signal on our own code, not third-party gaps.
python_version = "3.12"
ignore_missing_imports = true
